# stereo_matching

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: adding_a_model.md  cli.md  data.md  dependencies.md  evaluation.md  models.md  pipeline.md  release_notes.md  training.md
examples/: compare_demo.py  demo.py
src/stereo_matching/: __init__.py  cli.py  configuration_utils.py  modeling_utils.py  output.py  pipeline_utils.py  processing_utils.py  registry.py  viz.py
src/stereo_matching/models/: __init__.py
src/stereo_matching/models/aanet/: __init__.py  configuration_aanet.py  modeling_aanet.py
src/stereo_matching/models/auto/: __init__.py  modeling_auto.py  processing_auto.py
src/stereo_matching/models/crestereo/: __init__.py  configuration_crestereo.py  modeling_crestereo.py
src/stereo_matching/models/foundation_stereo/: __init__.py  configuration_foundation_stereo.py  modeling_foundation_stereo.py
src/stereo_matching/models/igev_plusplus/: __init__.py  configuration_igev_plusplus.py  modeling_igev_plusplus.py
src/stereo_matching/models/igev_stereo/: __init__.py  configuration_igev_stereo.py  modeling_igev_stereo.py
src/stereo_matching/models/raft_stereo/: __init__.py  configuration_raft_stereo.py  modeling_raft_stereo.py
src/stereo_matching/models/s2m2/: __init__.py  configuration_s2m2.py  modeling_s2m2.py
src/stereo_matching/models/unimatch/: __init__.py  configuration_unimatch.py  modeling_unimatch.py
